package br.com.iphone.interfaces;

public interface AparelhoTelefonico {
    void ligar();
    void desligar();
    void chamar(String numero);
    void atender();
    void iniciarCorreioVoz();
}
